<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MisJuegosFragment">


    <SearchView
        android:id="@+id/searchJuegos"
        android:layout_width="392dp"
        android:layout_height="41dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerMisJuegos"
        android:layout_width="389dp"
        android:layout_height="456dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFiltrar" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAgregarJuego"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerMisJuegos" />

    <Spinner
        android:id="@+id/spinnerFiltroCategoria"
        android:layout_width="270dp"
        android:layout_height="22dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/searchJuegos" />

    <Spinner
        android:id="@+id/spinnerFiltroPublicador"
        android:layout_width="270dp"
        android:layout_height="22dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/spinnerFiltroCategoria" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:text="@string/categoria"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchJuegos" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/publicador"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <Button
        android:id="@+id/buttonFiltrar"
        android:layout_width="104dp"
        android:layout_height="40dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="48dp"
        android:text="@string/filtrar"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerFiltroPublicador" />

    <Button
        android:id="@+id/buttonLimpiarFiltro"
        android:layout_width="104dp"
        android:layout_height="40dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="12dp"
        android:text="@string/limpiar"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonFiltrar"
        app:layout_constraintTop_toBottomOf="@+id/spinnerFiltroPublicador" />

</androidx.constraintlayout.widget.ConstraintLayout>